# rosens

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  check.bat  pyproject.toml  ruff.toml
etc/: dump_data.py
src/rosens/: __init__.py  api.py  config.py  datasets.py  server.py  storage.py  util.py
src/rosens/frontend/: index.html
src/rosens/models/: api_models.py  environment.py  sensor_data.py
tests/: test_api.py  test_storage.py
