[project]
name = "rosens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "polars>=1.35.4",
    "pydantic>=2.13.4",
    "pytest-asyncio>=1.4.0",
    "tzdata>=2026.1; sys_platform == 'win32'",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosens"]
